[package]
name = "nip-70"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Reference implementation of Nostr NIP-70"
documentation = "https://docs.rs/nip-70"
repository = "https://github.com/tvolk131/nip-70"

[dependencies]
anyhow = "1"
async-trait = "0.1"
nostr-sdk = "0.27"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "rt"] }

[dev-dependencies]
lazy_static = "1"
