[package]
name = "nip-70"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Reference implementation of Nostr NIP-70"
documentation = "https://docs.rs/nip-70"
repository = "https://github.com/tvolk131/nip-70"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
nostr-sdk = "0.29"
serde = "1"
serde_json = "1"
tokio = "1"

[dev-dependencies]
bitcoin_hashes = "0.12.0"
lazy_static = "1"
